--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,8 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %} -->
+        <a class="page-link" href="/granite/">Granite</a>
+        <a class="page-link" href="/nisan/">Nisan</a>
         <a class="page-link" href="/about/">About</a>
         <a class="page-link" href="/contact/">Contact</a>
       </div>
