--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,9 @@
           {% endif %}
         {% endfor %} -->
         <a class="page-link" href="/granite/">Granite</a>
+        <a class="page-link" href="/marble/">Marble</a>
+        <a class="page-link" href="/quartz/">Quartz</a>
+        <a class="page-link" href="/buddha/">Buddha</a>
         <a class="page-link" href="/nisan/">Nisan</a>
         <a class="page-link" href="/about/">About</a>
         <a class="page-link" href="/contact/">Contact</a>
