Add menu access.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,11 +19,14 @@
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %} -->
+		<a class="page-link" href="/house/">Renovation</a>
         <a class="page-link" href="/granite/">Granite</a>
         <a class="page-link" href="/marble/">Marble</a>
         <a class="page-link" href="/quartz/">Quartz</a>
         <a class="page-link" href="/buddha/">Buddha</a>
+		<a class="page-link" href="/fengshui/">Fengshui</a>
         <a class="page-link" href="/nisan/">Nisan</a>
+		<a class="page-link" href="/tomb/">Tomb</a>
         <a class="page-link" href="/about/">About</a>
         <a class="page-link" href="/contact/">Contact</a>
       </div>
