Add menu at website header.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,12 @@
                         <a href="#portfolio">Product</a>
                     </li>
                     <li class="page-scroll">
+                        <a href="">Tool</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="http://hlgranite.wordpress.com/">Blog</a>
+                    </li>
+                    <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
