--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,11 +7,9 @@
     <body id="page-top" class="index">
 
         {% include header.html %}
-        {% include portfolio_grid.html %}
+        {% include plain.html %}
         {% include about.html %}
-        {% include contact.html %}
         {% include footer.html %}
-        {% include modals.html %}
         {% include js.html %}
 
     </body>
