Update hompepage slogan.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
                     <div class="intro-text">
                         <span class="name">{{ site.title }}</span>
                         <hr class="star-light">
-                        <span class="skills">House Renovation - Sandblasting - Tomb Maker</span>
+                        <span class="skills">House Renovation - Granite Works - Sandblasting - Tomb Engraving</span>
                     </div>
                 </div>
             </div>
