No code changes.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                         <a href="#portfolio">Product</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="">Tool</a>
+                        <a href="#tool">Tool</a>
                     </li>
                     <li class="page-scroll">
                         <a href="http://hlgranite.wordpress.com/">Blog</a>
