--- a/_includes/plain.html
+++ b/_includes/plain.html
@@ -1,11 +1,22 @@
-<div class="post">
-
-    <header class="post-header">
-        <h1 class="post-title">{{ page.title }}</h1>
-    </header>
-
-    <article class="post-content">
-        {{ content }}
-    </article>
-
+<div class="modal-content">
+    <div class="close-modal" data-dismiss="modal">
+        <div class="lr">
+            <div class="rl">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <div class="modal-body">
+                    <h2>{{ page.title }}</h2>
+                    <hr class="star-primary">
+                    <p>{{ page.description }}</p>
+                    <article class="post-content">
+                        {{ content }}
+                    </article>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
