Temporarily hide tool menu since don't know what to show here.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,9 +21,9 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Product</a>
                     </li>
-                    <li class="page-scroll">
+                    <!-- TODO: <li class="page-scroll">
                         <a href="#tool">Tool</a>
-                    </li>
+                    </li>-->
                     <li class="page-scroll">
                         <a href="http://hlgranite.wordpress.com/">Blog</a>
                     </li>
